--- a/add-expense.html
+++ b/add-expense.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,6 +13,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/main.css" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg">
@@ -46,11 +48,14 @@
                 aria-expanded="false"
               >
                 <img
-                  src="images/person.jpg"
+                  id="userAvatar"
+                  src="images/loading.gif"
                   alt="User Avatar"
                   style="width: 30px; height: 30px; border-radius: 50%"
                 />
-                <span id="user">Username</span>
+                <span id="username"
+                  >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span
+                >
               </a>
               <ul
                 class="dropdown-menu dropdown-menu-end"
@@ -60,10 +65,7 @@
                   <a class="dropdown-item" href="profile.html">Profile</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="settings.html">Settings</a>
-                </li>
-                <li>
-                  <a class="dropdown-item text-danger" href="logout.html"
+                  <a class="dropdown-item text-danger" href="#" id="logoutBtn"
                     >Logout</a
                   >
                 </li>
@@ -149,19 +151,6 @@
                 <label for="expenseNotes">Notes (Optional)</label>
               </div>
             </div>
-            <div class="col-12">
-              <div class="receipt-upload-btn" id="receiptUpload">
-                <i class="fas fa-receipt fa-2x mb-2"></i>
-                <p class="mb-0">Click to upload receipt (Optional)</p>
-                <input
-                  type="file"
-                  id="receiptInput"
-                  accept="image/*"
-                  class="d-none"
-                />
-              </div>
-              <img id="receiptPreview" class="receipt-preview d-none" />
-            </div>
             <div class="col-12 mt-4">
               <button type="submit" class="submit-expense-btn">
                 Add Expense
@@ -172,43 +161,202 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      (() => {
-        const forms = document.querySelectorAll(".needs-validation");
-        Array.from(forms).forEach((form) => {
-          form.addEventListener(
-            "submit",
-            (event) => {
-              if (!form.checkValidity()) {
-                event.preventDefault();
-                event.stopPropagation();
-              }
+    <script type="module">
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
+      import {
+        getAuth,
+        onAuthStateChanged,
+        signInWithPopup,
+        signOut,
+        createUserWithEmailAndPassword,
+        GoogleAuthProvider,
+      } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-auth.js";
+      import {
+        getFirestore,
+        collection,
+        addDoc,
+        doc,
+        getDoc,
+        setDoc,
+        updateDoc,
+      } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-firestore.js";
 
-              form.classList.add("was-validated");
-            },
-            false
-          );
-        });
-        const receiptUpload = document.getElementById("receiptUpload");
-        const receiptInput = document.getElementById("receiptInput");
-        const receiptPreview = document.getElementById("receiptPreview");
-        receiptUpload.addEventListener("click", () => {
-          receiptInput.click();
-        });
+      const firebaseConfig = {
+        apiKey: "AIzaSyCmbKTx5knVCm93Wq6FaeU6M1e3ilAQ9UU",
+        authDomain: "spendwise-19dce.firebaseapp.com",
+        projectId: "spendwise-19dce",
+        storageBucket: "spendwise-19dce.firebaseapp.com",
+        messagingSenderId: "984774602833",
+        appId: "1:984774602833:web:356f2f46f7009eb84e8870",
+      };
 
-        receiptInput.addEventListener("change", (e) => {
-          if (e.target.files && e.target.files[0]) {
-            const reader = new FileReader();
+      const app = initializeApp(firebaseConfig);
+      const db = getFirestore(app);
+      const auth = getAuth(app);
 
-            reader.onload = (e) => {
-              receiptPreview.src = e.target.result;
-              receiptPreview.classList.remove("d-none");
-            };
+      function getQueryParam(param) {
+        const urlParams = new URLSearchParams(window.location.search);
+        return urlParams.get(param);
+      }
 
-            reader.readAsDataURL(e.target.files[0]);
+      const expenseForm = document.getElementById("expenseForm");
+      const expenseId = getQueryParam("id");
+
+      onAuthStateChanged(auth, (user) => {
+        if (user) {
+          const userId = user.uid;
+
+          if (expenseId) {
+            const docRef = doc(db, "expenses", expenseId);
+
+            getDoc(docRef)
+              .then((docSnap) => {
+                if (docSnap.exists()) {
+                  const expenseData = docSnap.data();
+                  document.getElementById("expenseTitle").value =
+                    expenseData.title || "";
+                  document.getElementById("expenseAmount").value =
+                    expenseData.amount || "";
+                  document.getElementById("expenseCategory").value =
+                    expenseData.category || "";
+                  document.getElementById("expenseDate").value =
+                    expenseData.date || "";
+                  document.getElementById("expenseNotes").value =
+                    expenseData.notes || "";
+                } else {
+                  console.error("No such document!");
+                }
+              })
+              .catch((error) => {
+                console.error("Error fetching document:", error);
+              });
           }
+
+          expenseForm.addEventListener("submit", async (e) => {
+            e.preventDefault();
+
+            const title = document.getElementById("expenseTitle").value.trim();
+            const amount = parseFloat(
+              document.getElementById("expenseAmount").value.trim()
+            );
+            const category = document
+              .getElementById("expenseCategory")
+              .value.trim();
+            const date = document.getElementById("expenseDate").value.trim();
+            const notes = document.getElementById("expenseNotes").value.trim();
+
+            if (!title || !amount || !category || !date) {
+              Swal.fire({
+                title: "Error!",
+                text: "Please fill all required fields.",
+                icon: "error",
+                confirmButtonText: "OK",
+              });
+              return;
+            }
+
+            try {
+              if (expenseId) {
+                const docRef = doc(db, "expenses", expenseId);
+                await updateDoc(docRef, {
+                  title,
+                  amount,
+                  category,
+                  date,
+                  notes,
+                });
+
+                Swal.fire({
+                  title: "Expense Updated!",
+                  text: "Your expense has been successfully updated.",
+                  icon: "success",
+                  confirmButtonText: "OK",
+                }).then(() => {
+                  window.location.href = "expenses.html";
+                });
+              } else {
+                await addDoc(collection(db, "expenses"), {
+                  userId,
+                  title,
+                  amount,
+                  category,
+                  date,
+                  notes,
+                });
+
+                Swal.fire({
+                  title: "Expense Added!",
+                  text: "Your expense has been successfully added.",
+                  icon: "success",
+                  confirmButtonText: "OK",
+                }).then(() => {
+                  expenseForm.reset();
+                });
+              }
+            } catch (error) {
+              console.error("Error handling expense:", error);
+              Swal.fire({
+                title: "Error!",
+                text: error.message,
+                icon: "error",
+                confirmButtonText: "OK",
+              });
+            }
+          });
+        } else {
+          console.error("User not authenticated.");
+          window.location.href = "login.html";
+        }
+      });
+
+      onAuthStateChanged(auth, async (user) => {
+        if (user) {
+          const userDoc = await getDoc(doc(db, "users", user.uid));
+          if (userDoc.exists()) {
+            const userData = userDoc.data();
+            document.getElementById("username").textContent =
+              userData.username || "User";
+            document.getElementById("userAvatar").src =
+              userData.profilePicture || "images/person.jpg";
+          }
+        } else {
+          window.location.href = "login.html";
+        }
+      });
+
+      const logoutBtn = document.getElementById("logoutBtn");
+      logoutBtn.addEventListener("click", async () => {
+        const confirmLogout = await Swal.fire({
+          title: "Are you sure?",
+          text: "You will be logged out of your account.",
+          icon: "warning",
+          showCancelButton: true,
+          confirmButtonText: "Logout",
+          cancelButtonText: "Cancel",
         });
-      })();
+
+        if (confirmLogout.isConfirmed) {
+          try {
+            await signOut(auth);
+            Swal.fire({
+              title: "Logged Out",
+              text: "You have successfully logged out.",
+              icon: "success",
+              confirmButtonText: "OK",
+            }).then(() => {
+              window.location.href = "login.html";
+            });
+          } catch (error) {
+            console.error("Error logging out:", error);
+            Swal.fire({
+              title: "Error!",
+              text: "Failed to log out. Please try again.",
+              icon: "error",
+              confirmButtonText: "OK",
+            });
+          }
+        }
+      });
     </script>
   </body>
 </html>
