--- a/dashboard.html
+++ b/dashboard.html
@@ -1,20 +1,44 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SpendWise - Dashboard</title>
+
+    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- Font Awesome -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
       rel="stylesheet"
     />
+
+    <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <!-- Firebase -->
+    <script
+      src="https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js"
+      type="module"
+    ></script>
+    <script
+      src="https://www.gstatic.com/firebasejs/11.1.0/firebase-auth.js"
+      type="module"
+    ></script>
+    <script
+      src="https://www.gstatic.com/firebasejs/11.1.0/firebase-firestore.js"
+      type="module"
+    ></script>
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
+    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a href="/" class="logo text-center">Spend<span>Wise.</span></a>
@@ -47,11 +71,14 @@
                 aria-expanded="false"
               >
                 <img
-                  src="images/person.jpg"
+                  id="userAvatar"
+                  src="images/loading.gif"
                   alt="User Avatar"
                   style="width: 30px; height: 30px; border-radius: 50%"
                 />
-                <span id="user">Username</span>
+                <span id="username"
+                  >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span
+                >
               </a>
               <ul
                 class="dropdown-menu dropdown-menu-end"
@@ -61,10 +88,7 @@
                   <a class="dropdown-item" href="profile.html">Profile</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="settings.html">Settings</a>
-                </li>
-                <li>
-                  <a class="dropdown-item text-danger" href="logout.html"
+                  <a class="dropdown-item text-danger" href="#" id="logoutBtn"
                     >Logout</a
                   >
                 </li>
@@ -74,232 +98,243 @@
         </div>
       </div>
     </nav>
-    <div class="container">
+
+    <!-- Main Content -->
+    <div class="container mt-4">
+      <!-- Stats Cards -->
       <div class="row g-4 mb-4">
         <div class="col-md-4">
           <div class="dashboard-card stat-card">
             <h5>Total Expenses</h5>
-            <div class="stat-value">&#x24;2,459.50</div>
+            <div id="totalExpenses" class="stat-value">$0.00</div>
             <div class="chart-label">This Month</div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="dashboard-card stat-card">
             <h5>Average Daily</h5>
-            <div class="stat-value">&#x24;82.00</div>
+            <div id="averageDaily" class="stat-value">$0.00</div>
             <div class="chart-label">Last 30 Days</div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="dashboard-card stat-card">
             <h5>Biggest Expense</h5>
-            <div class="stat-value">&#x24;450.00</div>
-            <div class="chart-label">Rent</div>
+            <div id="biggestExpense" class="stat-value">$0.00</div>
+            <div id="biggestExpenseCategory" class="chart-label">None</div>
           </div>
         </div>
       </div>
 
+      <!-- Charts and Transactions -->
       <div class="row g-4">
         <div class="col-md-8">
           <div class="dashboard-card">
-            <div class="d-flex justify-content-between align-items-center mb-4">
-              <h4>Spending Overview</h4>
-              <select
-                class="form-select"
-                style="
-                  width: auto;
-                  background: var(--hover-color);
-                  color: var(--text);
-                  border: none;
-                "
-              >
-                <option>Last 7 Days</option>
-                <option>Last 30 Days</option>
-                <option>Last 3 Months</option>
-              </select>
-            </div>
+            <h4>Spending Overview</h4>
             <div class="chart-container">
               <canvas id="expenseChart"></canvas>
             </div>
           </div>
         </div>
+
         <div class="col-md-4">
           <div class="dashboard-card">
-            <div
-              class="d-flex justify-content-between align-items-center mb-4 column-mobile"
-            >
-              <h5>Recent Transactions</h5>
-              <a href="add-expense.html" class="btn-add-expense">
-                <i class="fas fa-plus me-2"></i>Add Expense
-              </a>
-            </div>
-            <div class="search-filter-container">
-              <input
-                type="text"
-                class="search-input form-control mb-3"
-                placeholder="Search transactions..."
-              />
-              <div class="d-flex gap-2">
-                <select class="filter-select form-select">
-                  <option value>All Categories</option>
-                  <option value="Groceries">Groceries</option>
-                  <option value="Transport">Transport</option>
-                  <option value="Entertainment">Entertainment</option>
-                  <option value="Bills">Bills</option>
-                  <option value="Shopping">Shopping</option>
-                </select>
-                <select class="filter-select form-select">
-                  <option value="7">Last 7 Days</option>
-                  <option value="30">Last 30 Days</option>
-                  <option value="90">Last 3 Months</option>
-                  <option value="all">All Time</option>
-                </select>
-              </div>
-            </div>
-            <div class="transaction-list">
-              <div class="transaction-item" data-id="1">
-                <div
-                  class="d-flex justify-content-between align-items-center mb-2"
-                >
-                  <span class="category-badge">Groceries</span>
-                  <span class="text-danger">-&#x24;85.50</span>
-                </div>
-                <div class="d-flex justify-content-between">
-                  <small class="text-muted">Walmart</small>
-                  <small class="text-muted">Today</small>
-                </div>
-                <div class="action-buttons">
-                  <button class="btn-edit" onclick="editTransaction(1)">
-                    <i class="fas fa-edit me-1"></i>Edit
-                  </button>
-                  <button class="btn-delete" onclick="deleteTransaction(1)">
-                    <i class="fas fa-trash-alt me-1"></i>Delete
-                  </button>
-                </div>
-              </div>
-              <div class="transaction-item" data-id="2">
-                <div
-                  class="d-flex justify-content-between align-items-center mb-2"
-                >
-                  <span class="category-badge">Transport</span>
-                  <span class="text-danger">-&#x24;25.00</span>
-                </div>
-                <div class="d-flex justify-content-between">
-                  <small class="text-muted">Uber</small>
-                  <small class="text-muted">Yesterday</small>
-                </div>
-                <div class="action-buttons">
-                  <button class="btn-edit" onclick="editTransaction(2)">
-                    <i class="fas fa-edit me-1"></i>Edit
-                  </button>
-                  <button class="btn-delete" onclick="deleteTransaction(2)">
-                    <i class="fas fa-trash-alt me-1"></i>Delete
-                  </button>
-                </div>
-              </div>
-              <div class="transaction-item" data-id="3">
-                <div
-                  class="d-flex justify-content-between align-items-center mb-2"
-                >
-                  <span class="category-badge">Entertainment</span>
-                  <span class="text-danger">-&#x24;45.00</span>
-                </div>
-                <div class="d-flex justify-content-between">
-                  <small class="text-muted">Cinema</small>
-                  <small class="text-muted">2 days ago</small>
-                </div>
-                <div class="action-buttons">
-                  <button class="btn-edit" onclick="editTransaction(3)">
-                    <i class="fas fa-edit me-1"></i>Edit
-                  </button>
-                  <button class="btn-delete" onclick="deleteTransaction(3)">
-                    <i class="fas fa-trash-alt me-1"></i>Delete
-                  </button>
-                </div>
-              </div>
-            </div>
+            <h5>Recent Transactions</h5>
+            <div id="transactionList" class="transaction-list"></div>
           </div>
         </div>
       </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      function editTransaction(id) {}
-      function deleteTransaction(id) {}
-      const expenseChartData = {
-        labels: ["Mon", "Tue", "Wed", "Thu", "Fri", "Sat", "Sun"],
-        datasets: [
-          {
-            label: "Daily Expenses",
-            data: [65, 59, 80, 81, 56, 55, 40],
-            fill: true,
-            borderColor: "#ffa97a",
-            backgroundColor: "rgba(255, 169, 122, 0.1)",
-            tension: 0.4,
-            pointBackgroundColor: "#ffa97a",
-            pointBorderColor: "#ffa97a",
-            pointHoverBackgroundColor: "#ff7c7c",
-            pointHoverBorderColor: "#ff7c7c",
-          },
-        ],
+    <!-- Scripts -->
+    <script type="module">
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
+      import {
+        getAuth,
+        onAuthStateChanged,
+        signOut,
+      } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-auth.js";
+      import {
+        getFirestore,
+        collection,
+        query,
+        where,
+        orderBy,
+        limit,
+        getDocs,
+        getDoc,
+        doc,
+      } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-firestore.js";
+
+      const firebaseConfig = {
+        apiKey: "AIzaSyCmbKTx5knVCm93Wq6FaeU6M1e3ilAQ9UU",
+        authDomain: "spendwise-19dce.firebaseapp.com",
+        projectId: "spendwise-19dce",
+        storageBucket: "spendwise-19dce.appspot.com",
+        messagingSenderId: "984774602833",
+        appId: "1:984774602833:web:356f2f46f7009eb84e8870",
       };
-      const expenseChartConfig = {
-        type: "line",
-        data: expenseChartData,
-        options: {
-          responsive: true,
-          maintainAspectRatio: false,
-          scales: {
-            y: {
-              beginAtZero: true,
-              grid: {
-                color: "rgba(255, 255, 255, 0.1)",
-              },
-              ticks: {
-                color: "#ffffff",
-              },
-            },
-            x: {
-              grid: {
-                color: "rgba(255, 255, 255, 0.1)",
-              },
-              ticks: {
-                color: "#ffffff",
-              },
-            },
-          },
-          plugins: {
-            legend: {
-              display: false,
-            },
-          },
-        },
+
+      const app = initializeApp(firebaseConfig);
+      const db = getFirestore(app);
+      const auth = getAuth(app);
+
+      const fetchDashboardData = async (userId) => {
+        const expensesRef = collection(db, "expenses");
+        const q = query(expensesRef, where("userId", "==", userId));
+        const snapshot = await getDocs(q);
+
+        let totalExpenses = 0;
+        let dailyExpenses = [];
+        let biggestExpense = 0;
+        let biggestExpenseCategory = "None";
+
+        snapshot.forEach((doc) => {
+          const data = doc.data();
+          const amount = parseFloat(data.amount);
+
+          totalExpenses += amount;
+          dailyExpenses.push(amount);
+
+          if (amount > biggestExpense) {
+            biggestExpense = amount;
+            biggestExpenseCategory = data.category || "Unknown";
+          }
+        });
+
+        document.getElementById(
+          "totalExpenses"
+        ).textContent = `$${totalExpenses.toFixed(2)}`;
+        document.getElementById("averageDaily").textContent = `$${(
+          totalExpenses / dailyExpenses.length
+        ).toFixed(2)}`;
+        document.getElementById(
+          "biggestExpense"
+        ).textContent = `$${biggestExpense.toFixed(2)}`;
+        document.getElementById("biggestExpenseCategory").textContent =
+          biggestExpenseCategory;
+
+        updateChart(dailyExpenses);
       };
-      const expenseChart = new Chart(
-        document.getElementById("expenseChart"),
-        expenseChartConfig
-      );
-      document.querySelector(".form-select").addEventListener("change", (e) => {
-        let newData;
-        switch (e.target.value) {
-          case "Last 7 Days":
-            newData = [65, 59, 80, 81, 56, 55, 40];
-            break;
-          case "Last 30 Days":
-            newData = [
-              65, 59, 80, 81, 56, 55, 40, 65, 59, 80, 81, 56, 55, 40, 65,
-            ];
-            break;
-          case "Last 3 Months":
-            newData = [
-              65, 59, 80, 81, 56, 55, 40, 65, 59, 80, 81, 56, 55, 40, 65, 59,
-              80, 81, 56, 55, 40, 65, 59, 80, 81, 56, 55, 40, 65, 59,
-            ];
-            break;
+
+      const fetchRecentTransactions = async (userId) => {
+        try {
+          const expensesRef = collection(db, "expenses");
+          const q = query(
+            expensesRef,
+            where("userId", "==", userId),
+            orderBy("date", "desc"),
+            limit(5)
+          );
+
+          const querySnapshot = await getDocs(q);
+          const transactionList = document.getElementById("transactionList");
+          transactionList.innerHTML = "";
+
+          if (querySnapshot.empty) {
+            transactionList.innerHTML = `
+        <div class="text-center text-muted">No recent transactions found.</div>
+      `;
+            return;
+          }
+
+          querySnapshot.forEach((doc) => {
+            const data = doc.data();
+            const transactionItem = document.createElement("div");
+            transactionItem.className = "transaction-item";
+
+            transactionItem.innerHTML = `
+        <div class="d-flex justify-content-between align-items-center mb-2">
+          <span class="category-badge">${
+            data.category || "Uncategorized"
+          }</span>
+          <span class="text-danger">-&#x24;${parseFloat(data.amount).toFixed(
+            2
+          )}</span>
+        </div>
+        <div class="d-flex justify-content-between">
+          <small class="text-muted">${data.title || "Untitled"}</small>
+          <small class="text-muted">${new Date(
+            data.date
+          ).toLocaleDateString()}</small>
+        </div>
+      `;
+            transactionList.appendChild(transactionItem);
+          });
+        } catch (error) {
+          console.error("Error fetching recent transactions:", error);
         }
-        expenseChart.data.datasets[0].data = newData;
-        expenseChart.update();
+      };
+
+      const updateChart = (data) => {
+        new Chart(document.getElementById("expenseChart"), {
+          type: "line",
+          data: {
+            labels: Array.from(
+              { length: data.length },
+              (_, i) => `Day ${i + 1}`
+            ),
+            datasets: [
+              {
+                label: "Daily Expenses",
+                data: data,
+                fill: true,
+                borderColor: "#ffa97a",
+                backgroundColor: "rgba(255, 169, 122, 0.1)",
+              },
+            ],
+          },
+        });
+      };
+      onAuthStateChanged(auth, async (user) => {
+        if (user) {
+          const userDoc = await getDoc(doc(db, "users", user.uid));
+          if (userDoc.exists()) {
+            const userData = userDoc.data();
+            document.getElementById("username").textContent =
+              userData.username || "User";
+            document.getElementById("userAvatar").src =
+              userData.profilePicture || "images/person.jpg";
+            fetchDashboardData(user.uid);
+            fetchRecentTransactions(user.uid);
+          }
+        } else {
+          window.location.href = "login.html";
+        }
+      });
+
+      const logoutBtn = document.getElementById("logoutBtn");
+      logoutBtn.addEventListener("click", async () => {
+        const confirmLogout = await Swal.fire({
+          title: "Are you sure?",
+          text: "You will be logged out of your account.",
+          icon: "warning",
+          showCancelButton: true,
+          confirmButtonText: "Logout",
+          cancelButtonText: "Cancel",
+        });
+
+        if (confirmLogout.isConfirmed) {
+          try {
+            await signOut(auth);
+            Swal.fire({
+              title: "Logged Out",
+              text: "You have successfully logged out.",
+              icon: "success",
+              confirmButtonText: "OK",
+            }).then(() => {
+              window.location.href = "login.html";
+            });
+          } catch (error) {
+            console.error("Error logging out:", error);
+            Swal.fire({
+              title: "Error!",
+              text: "Failed to log out. Please try again.",
+              icon: "error",
+              confirmButtonText: "OK",
+            });
+          }
+        }
       });
     </script>
   </body>
