--- a/expenses.html
+++ b/expenses.html
@@ -15,6 +15,7 @@
       href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap5.min.css"
       rel="stylesheet"
     />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
@@ -50,11 +51,14 @@
                 aria-expanded="false"
               >
                 <img
-                  src="images/person.jpg"
+                  id="userAvatar"
+                  src="images/loading.gif"
                   alt="User Avatar"
                   style="width: 30px; height: 30px; border-radius: 50%"
                 />
-                <span id="user">Username</span>
+                <span id="username"
+                  >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span
+                >
               </a>
               <ul
                 class="dropdown-menu dropdown-menu-end"
@@ -64,10 +68,7 @@
                   <a class="dropdown-item" href="profile.html">Profile</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="settings.html">Settings</a>
-                </li>
-                <li>
-                  <a class="dropdown-item text-danger" href="logout.html"
+                  <a class="dropdown-item text-danger" href="#" id="logoutBtn"
                     >Logout</a
                   >
                 </li>
@@ -79,7 +80,10 @@
     </nav>
     <div class="container">
       <div class="expenses-container">
-        <h2 class="mb-4">View Expenses</h2>
+        <div class="header-container">
+          <h2 class="mb-4">View Expenses</h2>
+          <a href="add-expense.html" class="btn-add-expense">Add Expenses</a>
+        </div>
 
         <div class="filter-section">
           <div class="row g-3">
@@ -139,31 +143,7 @@
                 <th>Actions</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td>2023-07-20</td>
-                <td>Grocery Shopping</td>
-                <td>Groceries</td>
-                <td>$125.50</td>
-                <td>
-                  <img
-                    src="images/person.jpg"
-                    class="receipt-thumbnail"
-                    data-bs-toggle="modal"
-                    data-bs-target="#receiptModal"
-                  />
-                </td>
-                <td>Weekly groceries from Walmart</td>
-                <td>
-                  <button class="btn btn-edit btn-sm me-2">
-                    <i class="fas fa-edit"></i>
-                  </button>
-                  <button class="btn btn-delete btn-sm">
-                    <i class="fas fa-trash"></i>
-                  </button>
-                </td>
-              </tr>
-            </tbody>
+            <tbody></tbody>
           </table>
         </div>
       </div>
@@ -180,68 +160,222 @@
             ></button>
           </div>
           <div class="modal-body text-center">
-            <img src="images/person.jpg" class="modal-image" />
+            <img src="" class="modal-image" alt="Receipt" />
           </div>
         </div>
       </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap5.min.js"></script>
-    <script>
-      $(document).ready(function () {
-        const table = $("#expensesTable").DataTable({
+    <script type="module">
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
+      import {
+        getFirestore,
+        collection,
+        query,
+        where,
+        orderBy,
+        getDocs,
+        doc,
+        deleteDoc,
+        getDoc,
+      } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-firestore.js";
+      import {
+        getAuth,
+        onAuthStateChanged,
+        signOut,
+      } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-auth.js";
+
+      const firebaseConfig = {
+        apiKey: "AIzaSyCmbKTx5knVCm93Wq6FaeU6M1e3ilAQ9UU",
+        authDomain: "spendwise-19dce.firebaseapp.com",
+        projectId: "spendwise-19dce",
+        storageBucket: "spendwise-19dce.appspot.com",
+        messagingSenderId: "984774602833",
+        appId: "1:984774602833:web:356f2f46f7009eb84e8870",
+      };
+      const app = initializeApp(firebaseConfig);
+      const db = getFirestore(app);
+      const auth = getAuth(app);
+      let table;
+      let currentUser;
+      onAuthStateChanged(auth, async (user) => {
+        if (user) {
+          currentUser = user;
+          const userDoc = await getDoc(doc(db, "users", user.uid));
+          if (userDoc.exists()) {
+            const userData = userDoc.data();
+            document.getElementById("username").textContent =
+              userData.username || "User";
+            document.getElementById("userAvatar").src =
+              userData.profilePicture || "images/person.jpg";
+          }
+          initializeDataTable();
+          loadExpenses();
+        } else {
+          window.location.href = "login.html";
+        }
+      });
+      function initializeDataTable() {
+        table = $("#expensesTable").DataTable({
           order: [[0, "desc"]],
           pageLength: 10,
           language: {
             search: "Search expenses:",
           },
+          columns: [
+            { data: "date" },
+            { data: "title" },
+            { data: "category" },
+            { data: "amount" },
+            { data: "receipt" },
+            { data: "notes" },
+            { data: "actions" },
+          ],
         });
-        $("#dateFilter, #categoryFilter").on("change", function () {
-          table.draw();
+      }
+      async function loadExpenses() {
+        try {
+          const expensesRef = collection(db, "expenses");
+          const q = query(
+            expensesRef,
+            where("userId", "==", currentUser.uid),
+            orderBy("date", "desc")
+          );
+          const querySnapshot = await getDocs(q);
+          table.clear();
+          querySnapshot.forEach((doc) => {
+            const expense = doc.data();
+            table.row
+              .add({
+                date: expense.date,
+                title: expense.title,
+                category: expense.category,
+                amount: `$${expense.amount.toFixed(2)}`,
+                receipt: expense.receiptUrl
+                  ? `<img src="${expense.receiptUrl}" class="receipt-thumbnail" data-bs-toggle="modal" data-bs-target="#receiptModal" onclick="showReceipt('${expense.receiptUrl}')" />`
+                  : "No receipt",
+                notes: expense.notes || "",
+                actions: `
+                <button class="btn btn-edit btn-sm me-2" onclick="editExpense('${doc.id}')">
+                  <i class="fas fa-edit"></i>
+                </button>
+                <button class="btn btn-delete btn-sm" onclick="deleteExpense('${doc.id}')">
+                  <i class="fas fa-trash"></i>
+                </button>
+              `,
+              })
+              .draw(false);
+          });
+        } catch (error) {
+          console.error("Error loading expenses:", error);
+          Swal.fire({
+            title: "Error!",
+            text: "Failed to load expenses. Please try again later.",
+            icon: "error",
+            confirmButtonText: "OK",
+          });
+        }
+      }
+      window.deleteExpense = async (expenseId) => {
+        const result = await Swal.fire({
+          title: "Are you sure?",
+          text: "You won't be able to revert this!",
+          icon: "warning",
+          showCancelButton: true,
+          confirmButtonText: "Yes, delete it!",
+          cancelButtonText: "Cancel",
         });
-
-        let timeoutId;
-        $("#minAmount, #maxAmount").on("input", function () {
-          clearTimeout(timeoutId);
-          timeoutId = setTimeout(() => {
-            table.draw();
-          }, 500);
-        });
-        $.fn.dataTable.ext.search.push(function (settings, data, dataIndex) {
-          const dateValue = $("#dateFilter").val();
-          const category = $("#categoryFilter").val();
-          const minAmount = parseFloat($("#minAmount").val()) || 0;
-          const maxAmount = parseFloat($("#maxAmount").val()) || Infinity;
-
-          const rowDate = new Date(data[0]);
-          const rowCategory = data[2];
-          const rowAmount = parseFloat(data[3].replace("$", ""));
-
-          let dateMatch = true;
-          if (dateValue !== "all") {
-            const today = new Date();
-            const daysAgo = today.setDate(
-              today.getDate() - parseInt(dateValue)
-            );
-            dateMatch = rowDate >= new Date(daysAgo);
+        if (result.isConfirmed) {
+          try {
+            await deleteDoc(doc(db, "expenses", expenseId));
+            await loadExpenses();
+            Swal.fire({
+              title: "Deleted!",
+              text: "Your expense has been deleted.",
+              icon: "success",
+              confirmButtonText: "OK",
+            });
+          } catch (error) {
+            console.error("Error deleting expense:", error);
+            Swal.fire({
+              title: "Error!",
+              text: "Failed to delete expense. Please try again.",
+              icon: "error",
+              confirmButtonText: "OK",
+            });
           }
-          const categoryMatch = category === "all" || rowCategory === category;
-          const amountMatch = rowAmount >= minAmount && rowAmount <= maxAmount;
-          return dateMatch && categoryMatch && amountMatch;
-        });
-        $(".btn-delete").on("click", function () {
-          if (confirm("Are you sure you want to delete this expense?")) {
-            $(this).closest("tr").remove();
-          }
-        });
+        }
+      };
+      window.editExpense = (expenseId) => {
+        window.location.href = `add-expense.html?id=${expenseId}`;
+      };
 
-        $(".btn-edit").on("click", function () {
-          const row = $(this).closest("tr");
-          window.location.href = `/edit-expense.html/${expenseId}`;
-        });
+      window.showReceipt = (receiptUrl) => {
+        document.querySelector("#receiptModal .modal-image").src = receiptUrl;
+      };
+      $("#dateFilter, #categoryFilter").on("change", function () {
+        table.draw();
       });
+
+      let timeoutId;
+      $("#minAmount, #maxAmount").on("input", function () {
+        clearTimeout(timeoutId);
+        timeoutId = setTimeout(() => {
+          table.draw();
+        }, 500);
+      });
+      $.fn.dataTable.ext.search.push(function (settings, data, dataIndex) {
+        const dateValue = $("#dateFilter").val();
+        const category = $("#categoryFilter").val();
+        const minAmount = parseFloat($("#minAmount").val()) || 0;
+        const maxAmount = parseFloat($("#maxAmount").val()) || Infinity;
+
+        const rowDate = new Date(data[0]);
+        const rowCategory = data[2];
+        const rowAmount = parseFloat(data[3].replace("$", ""));
+
+        let dateMatch = true;
+        if (dateValue !== "all") {
+          const today = new Date();
+          const daysAgo = today.setDate(today.getDate() - parseInt(dateValue));
+          dateMatch = rowDate >= new Date(daysAgo);
+        }
+
+        const categoryMatch = category === "all" || rowCategory === category;
+        const amountMatch = rowAmount >= minAmount && rowAmount <= maxAmount;
+
+        return dateMatch && categoryMatch && amountMatch;
+      });
+      document
+        .getElementById("logoutBtn")
+        .addEventListener("click", async () => {
+          const result = await Swal.fire({
+            title: "Are you sure?",
+            text: "You will be logged out of your account.",
+            icon: "warning",
+            showCancelButton: true,
+            confirmButtonText: "Logout",
+            cancelButtonText: "Cancel",
+          });
+          if (result.isConfirmed) {
+            try {
+              await signOut(auth);
+              window.location.href = "login.html";
+            } catch (error) {
+              console.error("Error logging out:", error);
+              Swal.fire({
+                title: "Error!",
+                text: "Failed to log out. Please try again.",
+                icon: "error",
+                confirmButtonText: "OK",
+              });
+            }
+          }
+        });
     </script>
   </body>
 </html>
