--- a/login.html
+++ b/login.html
@@ -6,10 +6,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      rel="stylesheet"
-    />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
     <link rel="stylesheet" href="css/main.css" />
   </head>
@@ -18,19 +15,18 @@
       <div class="login-card">
         <h1 class="logo text-center mb-4">Spend<span>Wise</span>.</h1>
         <h2 class="text-center mb-4">Sign In</h2>
-
         <div
           id="errorAlert"
           class="alert alert-danger d-none"
           role="alert"
         ></div>
 
-        <button type="button" class="btn-google" onclick="signInWithGoogle()">
+        <button type="button" class="btn-google" onclick="signUpWithGoogle()">
           <img
             src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg"
             alt="Google logo"
           />
-          Continue with Google
+          Sign in with Google
         </button>
         <div class="or-divider">
           <span>or</span>
@@ -66,11 +62,51 @@
         </p>
       </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
+
+    <script type="module">
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
+      import {
+        getAuth,
+        signInWithEmailAndPassword,
+        GoogleAuthProvider,
+        signInWithPopup,
+        onAuthStateChanged,
+      } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-auth.js";
+      import {
+        getFirestore,
+        doc,
+        getDoc,
+        setDoc,
+      } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-firestore.js";
+
+      // Firebase configuration
+      const firebaseConfig = {
+        apiKey: "AIzaSyCmbKTx5knVCm93Wq6FaeU6M1e3ilAQ9UU",
+        authDomain: "spendwise-19dce.firebaseapp.com",
+        projectId: "spendwise-19dce",
+        storageBucket: "spendwise-19dce.firebasestorage.app",
+        messagingSenderId: "984774602833",
+        appId: "1:984774602833:web:356f2f46f7009eb84e8870",
+      };
+
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const auth = getAuth(app);
+      const db = getFirestore(app);
+
+      // Redirect to dashboard if already logged in
+      onAuthStateChanged(auth, (user) => {
+        if (user) {
+          window.location.href = "dashboard.html";
+        }
+      });
+
+      // Handle Email/Password Login
       document.addEventListener("DOMContentLoaded", () => {
         const loginForm = document.getElementById("loginForm");
-        const errorAlert = document.getElementById("errorAlert");
+
         loginForm.addEventListener("submit", async (e) => {
           e.preventDefault();
           if (!loginForm.checkValidity()) {
@@ -78,8 +114,89 @@
             loginForm.classList.add("was-validated");
             return;
           }
+
+          const email = document.getElementById("email").value;
+          const password = document.getElementById("password").value;
+
+          try {
+            const userCredential = await signInWithEmailAndPassword(
+              auth,
+              email,
+              password
+            );
+            const user = userCredential.user;
+
+            // Fetch user data from Firestore
+            const userDoc = await getDoc(doc(db, "users", user.uid));
+            if (userDoc.exists()) {
+              console.log("User data:", userDoc.data());
+            } else {
+              console.error("User data not found in Firestore.");
+            }
+
+            Swal.fire({
+              title: "Welcome!",
+              text: "You have successfully logged in.",
+              icon: "success",
+              confirmButtonText: "Go to Dashboard",
+            }).then(() => {
+              window.location.href = "dashboard.html";
+            });
+          } catch (error) {
+            console.error("Error logging in:", error.message);
+            showError(error.message);
+          }
         });
       });
+
+      window.signUpWithGoogle = async function () {
+        const provider = new GoogleAuthProvider();
+        try {
+          const result = await signInWithPopup(auth, provider);
+          const user = result.user;
+
+          // Save user data in Firestore
+          await setDoc(doc(db, "users", user.uid), {
+            userId: user.uid,
+            username: user.displayName || "Google User",
+            email: user.email,
+            profilePicture: user.photoURL || null,
+            preferences: {
+              currency: "USD",
+              language: "English",
+            },
+          });
+
+          // Success message
+          Swal.fire({
+            title: "Welcome!",
+            text: "You have successfully logged in with Google.",
+            icon: "success",
+            confirmButtonText: "Go to Dashboard",
+          }).then(() => {
+            window.location.href = "dashboard.html";
+          });
+        } catch (error) {
+          console.error("Google sign-in error:", error);
+
+          Swal.fire({
+            title: "Error!",
+            text: "An error occurred during Google login. Please try again.",
+            icon: "error",
+            confirmButtonText: "OK",
+          });
+        }
+      };
+
+      // Show error using SweetAlert
+      function showError(message) {
+        Swal.fire({
+          title: "Error!",
+          text: message,
+          icon: "error",
+          confirmButtonText: "Try Again",
+        });
+      }
     </script>
   </body>
 </html>
