--- a/profile.html
+++ b/profile.html
@@ -11,6 +11,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
       rel="stylesheet"
     />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
@@ -46,11 +47,14 @@
                 aria-expanded="false"
               >
                 <img
-                  src="images/person.jpg"
+                  id="userAvatar"
+                  src="images/loading.gif"
                   alt="User Avatar"
                   style="width: 30px; height: 30px; border-radius: 50%"
                 />
-                <span id="user">Username</span>
+                <span id="username"
+                  >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span
+                >
               </a>
               <ul
                 class="dropdown-menu dropdown-menu-end"
@@ -60,10 +64,7 @@
                   <a class="dropdown-item" href="profile.html">Profile</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="settings.html">Settings</a>
-                </li>
-                <li>
-                  <a class="dropdown-item text-danger" href="logout.html"
+                  <a class="dropdown-item text-danger" href="#" id="logoutBtn"
                     >Logout</a
                   >
                 </li>
@@ -81,7 +82,7 @@
             <div class="profile-picture-container">
               <img
                 id="profilePicture"
-                src="images/person.jpg"
+                src="images/loading.gif"
                 alt="Profile Picture"
                 class="profile-picture"
               />
@@ -94,13 +95,7 @@
 
           <div class="mb-3">
             <label for="fullName" class="form-label">Full Name</label>
-            <input
-              type="text"
-              class="form-control"
-              id="fullName"
-              value="John Doe"
-              required
-            />
+            <input type="text" class="form-control" id="fullName" required />
             <div class="invalid-feedback">Please enter your full name.</div>
           </div>
 
@@ -110,7 +105,6 @@
               type="tel"
               class="form-control"
               id="phone"
-              value="+1 (555) 123-4567"
               pattern="[\+]?[(]?[0-9]{3}[)]?[-\s\.]?[0-9]{3}[-\s\.]?[0-9]{4,6}"
               required
             />
@@ -121,13 +115,56 @@
 
           <div class="mb-3">
             <label for="email" class="form-label">Email Address</label>
+            <input type="email" class="form-control" id="email" readonly />
+          </div>
+
+          <div class="mb-3">
+            <label for="currency" class="form-label">Preferred Currency</label>
+            <select class="form-select" id="currency" required>
+              <option value="USD">USD - US Dollar</option>
+              <option value="EUR">EUR - Euro</option>
+              <option value="GBP">GBP - British Pound</option>
+              <option value="JPY">JPY - Japanese Yen</option>
+              <option value="AUD">AUD - Australian Dollar</option>
+              <option value="CAD">CAD - Canadian Dollar</option>
+            </select>
+            <div class="invalid-feedback">
+              Please select your preferred currency.
+            </div>
+          </div>
+
+          <hr class="my-4" />
+
+          <h4 class="mb-3">Change Password</h4>
+          <div class="mb-3">
+            <label for="currentPassword" class="form-label"
+              >Current Password</label
+            >
+            <input type="password" class="form-control" id="currentPassword" />
+            <div class="invalid-feedback">
+              Please enter your current password.
+            </div>
+          </div>
+
+          <div class="mb-3">
+            <label for="newPassword" class="form-label">New Password</label>
             <input
-              type="email"
+              type="password"
               class="form-control"
-              id="email"
-              value="user@example.com"
-              readonly
+              id="newPassword"
+              minlength="8"
             />
+            <div class="invalid-feedback">
+              Password must be at least 8 characters long.
+            </div>
+          </div>
+
+          <div class="mb-3">
+            <label for="confirmPassword" class="form-label"
+              >Confirm New Password</label
+            >
+            <input type="password" class="form-control" id="confirmPassword" />
+            <div class="invalid-feedback">Passwords do not match.</div>
           </div>
 
           <div class="d-flex gap-2">
@@ -136,50 +173,223 @@
               Cancel
             </button>
           </div>
-          <div id="profileSuccess" class="success-message">
-            Profile updated successfully!
-          </div>
         </form>
       </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      const room = new WebsimSocket();
-      const form = document.getElementById("profileForm");
-      const imageInput = document.getElementById("imageInput");
+    <script type="module">
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
+      import {
+        getFirestore,
+        doc,
+        getDoc,
+        setDoc,
+      } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-firestore.js";
+      import {
+        getAuth,
+        onAuthStateChanged,
+        signOut,
+        updatePassword,
+        reauthenticateWithCredential,
+        EmailAuthProvider,
+      } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-auth.js";
+
+      const firebaseConfig = {
+        apiKey: "AIzaSyCmbKTx5knVCm93Wq6FaeU6M1e3ilAQ9UU",
+        authDomain: "spendwise-19dce.firebaseapp.com",
+        projectId: "spendwise-19dce",
+        storageBucket: "spendwise-19dce.appspot.com",
+        messagingSenderId: "984774602833",
+        appId: "1:984774602833:web:356f2f46f7009eb84e8870",
+      };
+
+      const app = initializeApp(firebaseConfig);
+      const db = getFirestore(app);
+      const auth = getAuth(app);
+
+      const profileForm = document.getElementById("profileForm");
+      const fullNameInput = document.getElementById("fullName");
+      const phoneInput = document.getElementById("phone");
+      const emailInput = document.getElementById("email");
+      const currencyInput = document.getElementById("currency");
       const profilePicture = document.getElementById("profilePicture");
-      const successMessage = document.getElementById("profileSuccess");
-      imageInput.addEventListener("change", async (event) => {
-        const file = event.target.files[0];
-        if (file) {
+      const imageInput = document.getElementById("imageInput");
+      const currentPasswordInput = document.getElementById("currentPassword");
+      const newPasswordInput = document.getElementById("newPassword");
+      const confirmPasswordInput = document.getElementById("confirmPassword");
+
+      onAuthStateChanged(auth, async (user) => {
+        if (user) {
           try {
-            const url = await websim.upload(file);
-            profilePicture.src = url;
-            successMessage.textContent =
-              "Profile picture updated successfully!";
-            successMessage.style.display = "block";
-            setTimeout(() => {
-              successMessage.style.display = "none";
-            }, 3000);
+            const userDoc = await getDoc(doc(db, "users", user.uid));
+            if (userDoc.exists()) {
+              const userData = userDoc.data();
+              fullNameInput.value = userData.username || "";
+              phoneInput.value = userData.phone || "";
+              emailInput.value = userData.email || user.email || "";
+              currencyInput.value = userData.currency || "USD";
+              profilePicture.src =
+                userData.profilePicture || "images/person.jpg";
+            }
           } catch (error) {
-            console.error("Error uploading image:", error);
-            alert("Failed to upload image. Please try again.");
+            console.error("Error fetching user data:", error);
+            Swal.fire({
+              title: "Error!",
+              text: "Failed to load user data. Please try again later.",
+              icon: "error",
+              confirmButtonText: "OK",
+            });
           }
+        } else {
+          window.location.href = "login.html";
         }
       });
-      form.addEventListener("submit", async (event) => {
-        event.preventDefault();
-        if (!form.checkValidity()) {
-          event.stopPropagation();
-        } else {
-          successMessage.textContent = "Profile updated successfully!";
-          successMessage.style.display = "block";
-          setTimeout(() => {
-            successMessage.style.display = "none";
-          }, 3000);
+
+      profileForm.addEventListener("submit", async (e) => {
+        e.preventDefault();
+
+        if (
+          currentPasswordInput.value ||
+          newPasswordInput.value ||
+          confirmPasswordInput.value
+        ) {
+          if (!currentPasswordInput.value) {
+            Swal.fire({
+              title: "Error!",
+              text: "Please enter your current password.",
+              icon: "error",
+              confirmButtonText: "OK",
+            });
+            return;
+          }
+
+          if (newPasswordInput.value !== confirmPasswordInput.value) {
+            Swal.fire({
+              title: "Error!",
+              text: "New passwords do not match.",
+              icon: "error",
+              confirmButtonText: "OK",
+            });
+            return;
+          }
         }
-        form.classList.add("was-validated");
+
+        try {
+          const user = auth.currentUser;
+          if (user) {
+            await setDoc(doc(db, "users", user.uid), {
+              username: fullNameInput.value,
+              phone: phoneInput.value,
+              email: user.email,
+              currency: currencyInput.value,
+              profilePicture: profilePicture.src,
+            });
+
+            if (currentPasswordInput.value && newPasswordInput.value) {
+              try {
+                const credential = EmailAuthProvider.credential(
+                  user.email,
+                  currentPasswordInput.value
+                );
+                await reauthenticateWithCredential(user, credential);
+                await updatePassword(user, newPasswordInput.value);
+
+                currentPasswordInput.value = "";
+                newPasswordInput.value = "";
+                confirmPasswordInput.value = "";
+              } catch (error) {
+                console.error("Error updating password:", error);
+                Swal.fire({
+                  title: "Error!",
+                  text: "Failed to update password. Please check your current password and try again.",
+                  icon: "error",
+                  confirmButtonText: "OK",
+                });
+                return;
+              }
+            }
+
+            Swal.fire({
+              title: "Success!",
+              text: "Your profile has been updated successfully.",
+              icon: "success",
+              confirmButtonText: "OK",
+            });
+          }
+        } catch (error) {
+          console.error("Error updating profile:", error);
+          Swal.fire({
+            title: "Error!",
+            text: "Failed to update your profile. Please try again.",
+            icon: "error",
+            confirmButtonText: "OK",
+          });
+        }
+      });
+
+      imageInput.addEventListener("change", (e) => {
+        const file = e.target.files[0];
+        if (file) {
+          const reader = new FileReader();
+          reader.onload = (event) => {
+            profilePicture.src = event.target.result;
+          };
+          reader.readAsDataURL(file);
+        }
+      });
+
+      let currentUser;
+      onAuthStateChanged(auth, async (user) => {
+        if (user) {
+          currentUser = user;
+          const userDoc = await getDoc(doc(db, "users", user.uid));
+          if (userDoc.exists()) {
+            const userData = userDoc.data();
+            document.getElementById("username").textContent =
+              userData.username || "User";
+            document.getElementById("userAvatar").src =
+              userData.profilePicture || "images/person.jpg";
+          }
+          initializeDataTable();
+          loadExpenses();
+        } else {
+          window.location.href = "login.html";
+        }
+      });
+
+      const logoutBtn = document.getElementById("logoutBtn");
+      logoutBtn.addEventListener("click", async () => {
+        const confirmLogout = await Swal.fire({
+          title: "Are you sure?",
+          text: "You will be logged out of your account.",
+          icon: "warning",
+          showCancelButton: true,
+          confirmButtonText: "Logout",
+          cancelButtonText: "Cancel",
+        });
+
+        if (confirmLogout.isConfirmed) {
+          try {
+            await signOut(auth);
+            Swal.fire({
+              title: "Logged Out",
+              text: "You have successfully logged out.",
+              icon: "success",
+              confirmButtonText: "OK",
+            }).then(() => {
+              window.location.href = "login.html";
+            });
+          } catch (error) {
+            console.error("Error logging out:", error);
+            Swal.fire({
+              title: "Error!",
+              text: "Failed to log out. Please try again.",
+              icon: "error",
+              confirmButtonText: "OK",
+            });
+          }
+        }
       });
     </script>
   </body>
