--- a/register.html
+++ b/register.html
@@ -7,13 +7,9 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      rel="stylesheet"
-    />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
     <link rel="stylesheet" href="css/main.css" />
-    <style></style>
   </head>
   <body>
     <div class="signup-container">
@@ -34,38 +30,49 @@
           />
           Sign up with Google
         </button>
-        <div class="or-divider">
-          <span>or</span>
-        </div>
+
+        <div class="or-divider"><span>or</span></div>
+
         <form id="signupForm" class="mb-4 needs-validation" novalidate>
+          <!-- Username -->
           <div class="mb-3">
-            <label for="fullName" class="form-label">Full Name</label>
+            <label for="username" class="form-label">Username</label>
             <input
               type="text"
               class="form-control signup-input"
-              id="fullName"
+              id="username"
+              name="username"
               required
+              minlength="3"
             />
-            <div class="invalid-feedback">Please enter your full name.</div>
+            <div class="invalid-feedback">
+              Please enter a username (minimum 3 characters).
+            </div>
           </div>
+
+          <!-- Email -->
           <div class="mb-3">
             <label for="email" class="form-label">Email address</label>
             <input
               type="email"
               class="form-control signup-input"
               id="email"
+              name="email"
               required
             />
             <div class="invalid-feedback">
               Please enter a valid email address.
             </div>
           </div>
+
+          <!-- Password -->
           <div class="mb-3">
             <label for="password" class="form-label">Password</label>
             <input
               type="password"
               class="form-control signup-input"
               id="password"
+              name="password"
               required
               minlength="8"
             />
@@ -73,6 +80,8 @@
               Password must be at least 8 characters long.
             </div>
           </div>
+
+          <!-- Confirm Password -->
           <div class="mb-3">
             <label for="confirmPassword" class="form-label"
               >Confirm Password</label
@@ -81,10 +90,13 @@
               type="password"
               class="form-control signup-input"
               id="confirmPassword"
+              name="confirmPassword"
               required
             />
             <div class="invalid-feedback">Passwords do not match.</div>
           </div>
+
+          <!-- Submit Button -->
           <button type="submit" class="btn-custom w-100">Create Account</button>
         </form>
         <p class="text-center">
@@ -93,29 +105,137 @@
         </p>
       </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
+
+    <script type="module">
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
+      import {
+        getAuth,
+        createUserWithEmailAndPassword,
+        GoogleAuthProvider,
+        signInWithPopup,
+      } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-auth.js";
+      import {
+        getFirestore,
+        doc,
+        setDoc,
+      } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-firestore.js";
+
+      const firebaseConfig = {
+        apiKey: "AIzaSyCmbKTx5knVCm93Wq6FaeU6M1e3ilAQ9UU",
+        authDomain: "spendwise-19dce.firebaseapp.com",
+        projectId: "spendwise-19dce",
+        storageBucket: "spendwise-19dce.firebaseapp.com",
+        messagingSenderId: "984774602833",
+        appId: "1:984774602833:web:356f2f46f7009eb84e8870",
+      };
+
+      const app = initializeApp(firebaseConfig);
+      const auth = getAuth(app);
+      const db = getFirestore(app);
+
       document.addEventListener("DOMContentLoaded", () => {
         const signupForm = document.getElementById("signupForm");
         const errorAlert = document.getElementById("errorAlert");
         const password = document.getElementById("password");
         const confirmPassword = document.getElementById("confirmPassword");
+
         confirmPassword.addEventListener("input", () => {
           if (confirmPassword.value !== password.value) {
             confirmPassword.setCustomValidity("Passwords do not match");
+            errorAlert.textContent = "Passwords do not match.";
           } else {
             confirmPassword.setCustomValidity("");
+            errorAlert.textContent = "";
           }
         });
+
         signupForm.addEventListener("submit", async (e) => {
           e.preventDefault();
           if (!signupForm.checkValidity()) {
-            e.stopPropagation();
             signupForm.classList.add("was-validated");
             return;
           }
+
+          const username = document.getElementById("username").value;
+          const email = document.getElementById("email").value;
+          const passwordValue = password.value;
+
+          try {
+            const userCredential = await createUserWithEmailAndPassword(
+              auth,
+              email,
+              passwordValue
+            );
+
+            const user = userCredential.user;
+
+            await setDoc(doc(db, "users", user.uid), {
+              userId: user.uid,
+              username: username,
+              email: user.email,
+              profilePicture: null,
+              preferences: {
+                currency: "USD",
+                language: "English",
+              },
+            });
+
+            Swal.fire({
+              title: "Welcome!",
+              text: "You have successfully registered.",
+              icon: "success",
+              confirmButtonText: "Go to Dashboard",
+            }).then(() => {
+              window.location.href = "dashboard.html";
+            });
+
+            signupForm.reset();
+          } catch (error) {
+            console.error("Error:", error.message);
+            errorAlert.textContent = error.message;
+            errorAlert.style.color = "red";
+          }
         });
       });
+
+      window.signUpWithGoogle = async function () {
+        const provider = new GoogleAuthProvider();
+        try {
+          const result = await signInWithPopup(auth, provider);
+          const user = result.user;
+
+          await setDoc(doc(db, "users", user.uid), {
+            userId: user.uid,
+            username: user.displayName || "Google User",
+            email: user.email,
+            profilePicture: user.photoURL || null,
+            preferences: {
+              currency: "USD",
+              language: "English",
+            },
+          });
+
+          Swal.fire({
+            title: "Welcome!",
+            text: "You have successfully logged in with Google.",
+            icon: "success",
+            confirmButtonText: "Go to Dashboard",
+          }).then(() => {
+            window.location.href = "dashboard.html";
+          });
+        } catch (error) {
+          console.error("Google sign-in error:", error);
+
+          Swal.fire({
+            title: "Error!",
+            text: "An error occurred during Google login. Please try again.",
+            icon: "error",
+            confirmButtonText: "OK",
+          });
+        }
+      };
     </script>
   </body>
 </html>
