--- a/reports.html
+++ b/reports.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,6 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
       rel="stylesheet"
@@ -47,11 +49,14 @@
                 aria-expanded="false"
               >
                 <img
-                  src="images/person.jpg"
+                  id="userAvatar"
+                  src="images/loading.gif"
                   alt="User Avatar"
                   style="width: 30px; height: 30px; border-radius: 50%"
                 />
-                <span id="user">Username</span>
+                <span id="username"
+                  >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span
+                >
               </a>
               <ul
                 class="dropdown-menu dropdown-menu-end"
@@ -61,10 +66,7 @@
                   <a class="dropdown-item" href="profile.html">Profile</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="settings.html">Settings</a>
-                </li>
-                <li>
-                  <a class="dropdown-item text-danger" href="logout.html"
+                  <a class="dropdown-item text-danger" href="#" id="logoutBtn"
                     >Logout</a
                   >
                 </li>
@@ -74,55 +76,30 @@
         </div>
       </div>
     </nav>
+
     <div class="container">
-      <div class="report-card mb-4">
-        <div class="row g-3">
-          <div class="col-md-4">
-            <label class="form-label">Date Range</label>
-            <select class="form-select" id="dateRange">
-              <option value="7">Last 7 Days</option>
-              <option value="30" selected>Last 30 Days</option>
-              <option value="90">Last 3 Months</option>
-              <option value="180">Last 6 Months</option>
-              <option value="365">Last Year</option>
-            </select>
-          </div>
-          <div class="col-md-4">
-            <label class="form-label">Category</label>
-            <select class="form-select" id="categoryFilter">
-              <option value="all" selected>All Categories</option>
-              <option value="Groceries">Groceries</option>
-              <option value="Transport">Transport</option>
-              <option value="Entertainment">Entertainment</option>
-              <option value="Bills">Bills</option>
-              <option value="Shopping">Shopping</option>
-              <option value="Others">Others</option>
-            </select>
-          </div>
-        </div>
-      </div>
       <div class="row g-4 mb-4">
         <div class="col-md-3">
           <div class="stat-card">
-            <div class="stat-value">$2,547.32</div>
+            <div class="stat-value">$0.00</div>
             <div class="stat-label">Total Expenses</div>
           </div>
         </div>
         <div class="col-md-3">
           <div class="stat-card">
-            <div class="stat-value">$84.91</div>
+            <div class="stat-value">$0.00</div>
             <div class="stat-label">Daily Average</div>
           </div>
         </div>
         <div class="col-md-3">
           <div class="stat-card">
-            <div class="stat-value">$523.45</div>
+            <div class="stat-value">$0.00</div>
             <div class="stat-label">Highest Expense</div>
           </div>
         </div>
         <div class="col-md-3">
           <div class="stat-card">
-            <div class="stat-value">47</div>
+            <div class="stat-value">0</div>
             <div class="stat-label">Total Transactions</div>
           </div>
         </div>
@@ -146,35 +123,87 @@
         </div>
       </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      const categoryData = {
-        labels: [
-          "Groceries",
-          "Transport",
-          "Entertainment",
-          "Bills",
-          "Shopping",
-          "Others",
-        ],
-        data: [850.25, 425.5, 320.75, 650.0, 180.82, 120.0],
+    <script type="module">
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
+      import {
+        getAuth,
+        onAuthStateChanged,
+        signOut,
+      } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-auth.js";
+      import {
+        getFirestore,
+        collection,
+        query,
+        where,
+        getDocs,
+        getDoc,
+        doc,
+      } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-firestore.js";
+
+      const firebaseConfig = {
+        apiKey: "AIzaSyCmbKTx5knVCm93Wq6FaeU6M1e3ilAQ9UU",
+        authDomain: "spendwise-19dce.firebaseapp.com",
+        projectId: "spendwise-19dce",
+        storageBucket: "spendwise-19dce.appspot.com",
+        messagingSenderId: "984774602833",
+        appId: "1:984774602833:web:356f2f46f7009eb84e8870",
+      };
+      const app = initializeApp(firebaseConfig);
+      const db = getFirestore(app);
+      const auth = getAuth(app);
+
+      const updateCharts = async (userId) => {
+        const expensesRef = collection(db, "expenses");
+        const q = query(expensesRef, where("userId", "==", userId));
+        const snapshot = await getDocs(q);
+        let totalExpenses = 0;
+        let weeklyExpenses = [0, 0, 0, 0];
+        let highestExpense = 0;
+        let totalTransactions = 0;
+        let categoryTotals = {};
+        const today = new Date();
+        const startOfWeek = (daysAgo) => {
+          const date = new Date(today);
+          date.setDate(date.getDate() - daysAgo);
+          return date;
+        };
+        snapshot.forEach((doc) => {
+          const data = doc.data();
+          const amount = parseFloat(data.amount);
+          const expenseDate = new Date(data.date);
+          totalExpenses += amount;
+          totalTransactions++;
+          if (expenseDate >= startOfWeek(0)) weeklyExpenses[3] += amount;
+          else if (expenseDate >= startOfWeek(7)) weeklyExpenses[2] += amount;
+          else if (expenseDate >= startOfWeek(14)) weeklyExpenses[1] += amount;
+          else if (expenseDate >= startOfWeek(21)) weeklyExpenses[0] += amount;
+          if (amount > highestExpense) highestExpense = amount;
+          categoryTotals[data.category] =
+            (categoryTotals[data.category] || 0) + amount;
+        });
+        const statCards = document.querySelectorAll(".stat-card .stat-value");
+        statCards[0].textContent = `$${totalExpenses.toFixed(2)}`;
+        statCards[1].textContent = `$${(
+          totalExpenses / totalTransactions
+        ).toFixed(2)}`;
+        statCards[2].textContent = `$${highestExpense.toFixed(2)}`;
+        statCards[3].textContent = totalTransactions;
+        updateCategoryChart(categoryTotals);
+        updateTimeChart(weeklyExpenses);
       };
 
-      const timeData = {
-        labels: ["Week 1", "Week 2", "Week 3", "Week 4"],
-        data: [580.25, 720.5, 625.75, 620.82],
-      };
-
-      // Setup Category Pie Chart
-      const categoryChart = new Chart(
-        document.getElementById("categoryChart"),
-        {
+      const updateCategoryChart = (categoryTotals) => {
+        const labels = Object.keys(categoryTotals);
+        const data = Object.values(categoryTotals);
+        new Chart(document.getElementById("categoryChart"), {
           type: "doughnut",
           data: {
-            labels: categoryData.labels,
+            labels,
             datasets: [
               {
-                data: categoryData.data,
+                data,
                 backgroundColor: [
                   "#ffa97a",
                   "#ff7c7c",
@@ -186,92 +215,85 @@
               },
             ],
           },
+        });
+      };
+
+      const updateTimeChart = (weeklyExpenses) => {
+        new Chart(document.getElementById("timeChart"), {
+          type: "bar",
+          data: {
+            labels: ["Week 1", "Week 2", "Week 3", "Week 4"],
+            datasets: [
+              {
+                label: "Spending ($)",
+                data: weeklyExpenses,
+                backgroundColor: "#ffa97a",
+                borderColor: "#ff7c7c",
+                borderWidth: 1,
+              },
+            ],
+          },
           options: {
             responsive: true,
             maintainAspectRatio: false,
-            plugins: {
-              legend: {
-                position: "right",
-                labels: {
-                  color: "#ffffff",
-                },
+            scales: {
+              y: {
+                beginAtZero: true,
               },
             },
           },
-        }
-      );
-      const timeChart = new Chart(document.getElementById("timeChart"), {
-        type: "bar",
-        data: {
-          labels: timeData.labels,
-          datasets: [
-            {
-              label: "Spending ($)",
-              data: timeData.data,
-              backgroundColor: "#ffa97a",
-              borderColor: "#ff7c7c",
-              borderWidth: 1,
-            },
-          ],
-        },
-        options: {
-          responsive: true,
-          maintainAspectRatio: false,
-          scales: {
-            y: {
-              beginAtZero: true,
-              grid: {
-                color: "rgba(255, 255, 255, 0.1)",
-              },
-              ticks: {
-                color: "#ffffff",
-              },
-            },
-            x: {
-              grid: {
-                color: "rgba(255, 255, 255, 0.1)",
-              },
-              ticks: {
-                color: "#ffffff",
-              },
-            },
-          },
-          plugins: {
-            legend: {
-              labels: {
-                color: "#ffffff",
-              },
-            },
-          },
-        },
-      });
-      document
-        .getElementById("dateRange")
-        .addEventListener("change", updateCharts);
-      document
-        .getElementById("categoryFilter")
-        .addEventListener("change", updateCharts);
-
-      function updateCharts() {
-        const dateRange = document.getElementById("dateRange").value;
-        const category = document.getElementById("categoryFilter").value;
-        console.log(
-          `Updating charts with date range: ${dateRange} days and category: ${category}`
-        );
-        const adjustment = Math.random() * 0.5 + 0.75;
-        categoryChart.data.datasets[0].data = categoryData.data.map(
-          (value) => value * adjustment
-        );
-        timeChart.data.datasets[0].data = timeData.data.map(
-          (value) => value * adjustment
-        );
-        categoryChart.update();
-        timeChart.update();
-        document.querySelectorAll(".stat-value").forEach((stat) => {
-          const currentValue = parseFloat(stat.textContent.replace("$", ""));
-          stat.textContent = "$" + (currentValue * adjustment).toFixed(2);
         });
-      }
+      };
+
+      onAuthStateChanged(auth, async (user) => {
+        if (user) {
+          const userDoc = await getDoc(doc(db, "users", user.uid));
+          if (userDoc.exists()) {
+            const userData = userDoc.data();
+            document.getElementById("username").textContent =
+              userData.username || "User";
+            document.getElementById("userAvatar").src =
+              userData.profilePicture || "images/person.jpg";
+            updateCharts(user.uid);
+          }
+        } else {
+          window.location.href = "login.html";
+        }
+      });
+
+      const logoutBtn = document.getElementById("logoutBtn");
+      logoutBtn.addEventListener("click", async () => {
+        const confirmLogout = await Swal.fire({
+          title: "Are you sure?",
+          text: "You will be logged out of your account.",
+          icon: "warning",
+          showCancelButton: true,
+          confirmButtonText: "Logout",
+          cancelButtonText: "Cancel",
+        });
+
+        if (confirmLogout.isConfirmed) {
+          try {
+            await signOut(auth);
+            Swal.fire({
+              title: "Logged Out",
+              text: "You have successfully logged out.",
+              icon: "success",
+              confirmButtonText: "OK",
+            }).then(() => {
+              window.location.href = "login.html";
+            });
+          } catch (error) {
+            console.error("Error logging out:", error);
+            Swal.fire({
+              title: "Error!",
+              text: "Failed to log out. Please try again.",
+              icon: "error",
+              confirmButtonText: "OK",
+            });
+          }
+        }
+      });
     </script>
   </body>
 </html>
